# Sovereign-Server

./: DISTROLESS.md  DOCKER_DESKTOP.en.md  DOCKER_DESKTOP.md  DOCKER_STORAGE.en.md  DOCKER_STORAGE.md  Dockerfile  Dockerfile.distroless  HTML5.en.md  HTML5.md  README.en.md  README.md  SANDBOX.en.md  SANDBOX.md  SECURITY.en.md  SECURITY.md  WEBSITE.en.md  WEBSITE.md  compose.distroless-paranoid.yaml  compose.distroless.yaml  compose.paranoid.yaml  compose.yaml  pyproject.toml
deploy/docker/: run-distroless.sh  run-paranoid.sh  seccomp-paranoid.json
examples/: app.py
sovereign/: __init__.py  acme.py  async_server.py  auth.py  cli.py  config.py  crypto.py  errors.py  eventhub.py  html5.py  logging_utils.py  middleware.py  multipart.py  orm.py  parser.py  pubsub.py  request.py  responses.py  router.py  sandbox.py  security.py  server.py  sessions.py  static.py  tasks.py  template.py  testing.py  utils.py  validation.py  websocket.py
static/: site.css  site.js
tests/: test_v10_1_distroless.py  test_v10_2_docker_desktop.py  test_v10_3_docker_storage.py  test_v10_4_site.py  test_v10_5_html5.py  test_v10_sandbox_async.py  test_v7_features.py  test_v8_extensions.py  test_v9_extensions.py
web/: index.html
web/assets/: app.css  app.js  site.webmanifest
